--- a/style.css
+++ b/style.css
@@ -51,3 +51,11 @@ button {
 button:hover {
     cursor: pointer;
 }
+
+
+@media screen and (max-width: 440px) {
+    li {
+        margin-right: 7%;
+        margin-left: 7%;
+    }
+}
